update hltv info
